# rekenkamer-j-en-v-orgs

./: .env.example  .gitignore  Dockerfile  build-and-push.sh  diora.py  dump-sources.py  main.py  pyproject.toml  readme.md  test.env  test_diora.py  test_main.py
.github/workflows/: ci.yml
data/: organisations.csv  synoniemen.csv  themes.csv
logs/: j-en-v-orgs.json
output/: output.xlsx  tmp.xlsx
tests/util/: test_env.py  test_s3.py
util/: app_engine.py  env.py  logger.py  mongo.py  s3.py
